fixed z-index and other minor issues

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,7 +4,6 @@
   padding: 0;
 }
 .dropdown {
-  z-index: 2;
   position: absolute;
   left: 25px;
   cursor: pointer;
@@ -46,20 +45,27 @@
   position: absolute;
   top: -180px;
   transition: top 1s ease-in-out 0s;
+  z-index: -1;
 }
 .tabs {
   width: 100%;
+  background: #931d25;
 }
 .tabs .tabs-items {
   width: 100%;
   height: 300px;
   display: flex;
+  color: white;
   justify-content: center;
   padding-top: 60px;
+  transition: color 2s ease 0s;
 }
 .tabs .tabs-item {
   display: none;
   width: 75%;
+  box-shadow: #3f090d -15px -5px 20px;
+  border-radius: 15px;
+  padding: 15px;
 }
 .tabs .tabs-item .tabs-item-title {
   font-size: 24px;
@@ -68,6 +74,8 @@
 }
 .tabs .tabs-item-selected {
   display: block;
+  color: black;
+  background: white;
 }
 .tabs .tabs-links {
   display: flex;
@@ -106,6 +114,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #931d25;
+  z-index: 1;
 }
 .header-container .header {
   height: 50px;
