--- a/components/Dropdown/Dropdown.less
+++ b/components/Dropdown/Dropdown.less
@@ -1,5 +1,4 @@
 .dropdown {
-    z-index: 2;
     position: absolute;
     left: 25px;
     cursor: pointer;
@@ -40,5 +39,6 @@
         position: absolute;
         top: -180px;
         transition: top 1s ease-in-out 0s;
+        z-index: -1;
     }
 }
