--- a/components/Tabs/Tabs.less
+++ b/components/Tabs/Tabs.less
@@ -1,15 +1,21 @@
 .tabs {
     width: 100%;
+    background: @lambda-red;
     .tabs-items {
         width: 100%;
         height: 300px;
         display: flex;
+        color: white;
         justify-content: center;
         padding-top: 60px;
+        transition: color 2s ease 0s;
     }
     .tabs-item {
         display: none;
         width: 75%;
+        box-shadow: rgb(63, 9, 13) -15px -5px 20px;
+        border-radius: 15px;
+        padding: 15px;
         .tabs-item-title {
             font-size: 24px;
             font-weight: bold;
@@ -18,6 +24,8 @@
     }
     .tabs-item-selected {
         display: block;
+        color: black;
+        background: white;
     }
     .tabs-links {
         display: flex;
